# wsnsim-project

./: .gitignore  PROMPTLOG.md  README.md  WSN_Gyakorlati_Utmutato_wsnsim_v1_1.txt  pyproject.toml  requirements.txt
experiments/: .gitkeep  aggregation_comparison.py  arq_sweep.py  case_study.py  design_space.py  duty_cycle_lifetime.py  edge_ai_comm_saving.py  federated_learning.py  hello_sim.py  localization_error.py  mac_comparison.py  prr_curve.py  routing_comparison.py  security_overhead.py  topology_viz.py
reports/figures/: .gitkeep
tests/: __init__.py  test_aggregation.py  test_channel.py  test_edge_ai.py  test_energy.py  test_fed_learning.py  test_mac.py  test_optimization.py  test_reliability.py  test_routing.py  test_scheduler.py  test_security.py  test_smoke.py  test_sync_localization.py  test_topology.py
wsnsim/: __init__.py
wsnsim/metrics/: __init__.py  collector.py
wsnsim/models/: __init__.py  aggregation.py  channel.py  edge_ai.py  energy.py  fed_learning.py  mac.py  optimization.py  packet.py  reliability.py  routing.py  security.py  sync_localization.py
wsnsim/scenarios/: __init__.py
wsnsim/sim/: __init__.py  clock.py  event.py  logger.py  scheduler.py
wsnsim/utils/: __init__.py  topology.py
