[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wsnsim"
version = "0.1.0"
description = "Python-alapú vezeték nélküli szenzorhálózat szimulátor"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "wsnsim contributors" }
]
keywords = ["wsn", "wireless sensor network", "simulation", "iot"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "numpy>=1.26",
    "networkx>=3.3",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["wsnsim*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=wsnsim --cov-report=term-missing"

[tool.coverage.run]
source = ["wsnsim"]
omit = ["tests/*"]
